@@ -12,10 +12,6 @@ Sandbox_EN = {
     Sandbox_MoreTraits_LuckImpact_tooltip = "The percent degree to which Lucky and Unlucky traits affect traits from this mod.<br>0% means lucky and unlucky have no effect on traits.",
     Sandbox_MoreTraits_AlcoholicFreeDrink = "Alcoholics Start With Drink",
     Sandbox_MoreTraits_AlcoholicFreeDrink_tooltip = "Players who take the Alcoholic trait start with a free bottle of alcohol.",
-    Sandbox_MoreTraits_ScroungerHighlights = "Scrounger Highlights Containers",
-    Sandbox_MoreTraits_ScroungerHighlights_tooltip = "Players who take the Scrounger trait will see containers highlighted if they have noticed some extra loot inside.",
-    Sandbox_MoreTraits_ScroungerHighlightsMaxTime = "Scrounger Highlights Containers: Time",
-    Sandbox_MoreTraits_ScroungerHighlightsMaxTime_tooltip = "In-game minutes after which, container will no longer be highlited.",
     Sandbox_MoreTraits_BouncerEffectiveness = "Bouncer Effectiveness",
     Sandbox_MoreTraits_BouncerEffectiveness_tooltip = "The percent chance that a player who has the Bouncer trait will trigger its effect.<br>This is rolled every tick, so 60 times/second for as long as the player has at least two or more zombies near them.<br>Increasing this value by even a small amount can dramatically overpower Bouncer.",
     Sandbox_MoreTraits_BouncerCooldown = "Bouncer Cooldown",
