@@ -157,4 +157,10 @@ UI_EN = {
     UI_trait_leadfootdesc = "You've always had a heavy step and now it's time to put your foot down - on some zombies.<br>Your stomps are considerably more powerful.",
     UI_trait_glassbody = "Made of Glass",
     UI_trait_glassbodydesc = "You're particularly vulnerable and frail.<br>You take twice as much damage from all sources.<br>You become easily scratched from minor injuries.<br>Even a short fall or moderate damage can result in a broken bone.<br>Heavy Encumberance can result in severe damage.",
+    UI_MoreTraits_Options_ScroungerAnnounce = "Announce Scrounger Finds",
+    UI_MoreTraits_Options_ScroungerAnnounce_ToolTip = "If you have the Scrounger trait, your character will say aloud what item(s) they found.",
+    UI_MoreTraits_Options_ScroungerHighlight = "Highlight Scrounger Containers",
+    UI_MoreTraits_Options_ScroungerHighlight_ToolTip = "If you have the Scrounger trait, you will see containers highlighted if there is extra loot inside.",
+    UI_MoreTraits_Options_ScroungerHighlightTime = "Highlight Time",
+    UI_MoreTraits_Options_ScroungerHighlightTime_ToolTip = "In-game minutes after which, container will no longer be highlighted.",
 }
