@@ -11,3 +11,4 @@ Add new trait: Made of Glass
 Reduce length of recovery for burns from Injured trait.
 Increase time modifier for Quick Worker when reading books.
 Fixed Prowess: Guns not scaling properly, Credit: vaikke
+Add in Mod Options support for Client-Side Settings.
